@@ -28,11 +28,11 @@ import org.apache.zookeeper.server.quorum.QuorumPeerConfig.ConfigException;
 
 
 public class ConfigUtils {
-	static public String getClientConfigStr(String configData) {
-        Properties props = new Properties();    	
+    static public String getClientConfigStr(String configData) {
+        Properties props = new Properties();        
         try {
           props.load(new StringReader(configData));
-		} catch (IOException e) {
+        } catch (IOException e) {
             e.printStackTrace();
             return "";
         }
@@ -43,17 +43,20 @@ public class ConfigUtils {
              String key = entry.getKey().toString().trim();
              String value = entry.getValue().toString().trim();
              if (key.equals("version")) version = value;
-             if (!key.startsWith("server.")) continue;	         
+             if (!key.startsWith("server.")) continue;           
              QuorumPeer.QuorumServer qs;
              try {
                qs = new QuorumPeer.QuorumServer(-1, value);
-             } catch (ConfigException e) {				
+             } catch (ConfigException e) {              
                     e.printStackTrace();
                     continue;
              }
              if (!first) sb.append(",");
              else first = false;
-             sb.append(qs.clientAddr.getHostString() + ":" + qs.clientAddr.getPort());
+             if (null != qs.clientAddr) {
+                 sb.append(qs.clientAddr.getHostString()
+                         + ":" + qs.clientAddr.getPort());
+             }
         }
         return version + " " + sb.toString();
     }
